--- a/SkipitChat/SkipitChat.csproj
+++ b/SkipitChat/SkipitChat.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>aspnet-Tweetbook-BE0EE6C3-7900-46F0-8C5E-050B178991CD</UserSecretsId>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'Production' " />
@@ -16,6 +17,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.8" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.2" />
@@ -31,6 +33,5 @@
     <Folder Include="Contracts\V1\Requests\" />
     <Folder Include="Contracts\V1\Response\" />
     <Folder Include="Services\" />
-    <Folder Include="Data\Migrations\" />
   </ItemGroup>
 </Project>
